# Tager-ASM

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TagerTest  cmake_install.cmake  tager
libs/: Files.h  LinkedList.h  Strings.h
src/: STEPS.md  Tager.c  Tager.h  sintaxes.c  sintaxes.h
test/: test.c
